--- a/html/1-TAGs.html
+++ b/html/1-TAGs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tag HTML</title>
+    <title>Tag HTML.</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 
         <input type="checkbox" />
 
-        <img src="https://media.licdn.com/dms/image/D4D0BAQGs0Jd8tULJZw/company-logo_200_200/0/1659810941517/dev_club_devs_logo?e=2147483647&v=beta&t=_zETqm5kDWLIw1agGkOUVHhA5H76qb90y3lG07sqaDQ" alt="dev club" />
+        <img src="https://media.licdn.com/dms/image/D4D0BAQGs0Jd8tULJZw/company-logo_200_200/0/1659810941517/dev_club_devs_logo?e=2147483647&v=beta&t=_zETqm5kDWLIw1agGkOUVHhA5H76qb90y3lG07sqaDQ" alt="dev club" /> 
 
 
 
