--- a/javascript/Conversor de Moedas/index.html
+++ b/javascript/Conversor de Moedas/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" onselect="s" >
         <header>
             <h1>Conversor de Moedas</h1>
         </header>
@@ -19,13 +19,13 @@
             <select name="" id="">
                 <option value="">R$ Real</option>
             </select>
-            
+
             <label>Converter para:</label>
-            <select name="" id="select" on>
-                <option value="">US$ Dólar</option>
-                <option value="">€ Euro</option>
+            <select name="" id="select">
+                <option value="dolar" id="dolarSelect">US$ Dólar</option>
+                <option value="euro" id="euroSelect">€ Euro</option>
             </select>
-            
+
             <p>Valor:</p>
             <input placeholder="R$2.000,00" id="valor">
             <button type="button" id="btn">Converter</button>
@@ -38,8 +38,8 @@
                 </div>
                 <img src="img/icons8-flecha-grossa-apontando-para-baixo-32.png" alt="seta">
                 <div class="section-container">
-                    <img src="img/EUA.png" alt="EUA">
-                    <p class="name-currency">Dólar</p>
+                    <img src="img/EUA.png" alt="EUA" id="imgExt">
+                    <p class="name-currency" id="name">Dólar</p>
                     <p class="currency-value" id="currencyValorDolar">US$2.000,00</p>
                 </div>
             </section>
